신규 데이터 인입 시에만 메일 발송 구축 완료

--- a/aa.ipynb
+++ b/aa.ipynb
@@ -10,7 +10,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cVenv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -29,7 +29,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a4e16549b87ac48be0cc70b700e664b9466470c1aa9de37367fb71a772beed6a"
+    "hash": "80ce09e16684246be9476ab716fa37abdb7be21476d5c548016d0011f7a1c2d5"
    }
   }
  },
